// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data column header component renders correctly with filter but no sort 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root MuiTableCell-head test-class MuiTableCell-sizeSmall"
  role="cell"
  style={
    Object {
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
>
  <div
    style={
      Object {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <Styled(MuiBox)
      display="flex"
    >
      <Styled(MuiBox)
        marginRight={1}
      >
        <Icon />
      </Styled(MuiBox)>
      <Styled(MuiBox)>
        <WithStyles(ForwardRef(Typography))
          noWrap={true}
          style={
            Object {
              "fontSize": "inherit",
              "lineHeight": "inherit",
            }
          }
        >
          Test
        </WithStyles(ForwardRef(Typography))>
      </Styled(MuiBox)>
    </Styled(MuiBox)>
    <TextColumnFilter
      label="Test"
      onChange={[MockFunction]}
    />
  </div>
  <Draggable
    allowAnyClick={false}
    axis="none"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={null}
    scale={1}
    transform={null}
  >
    <div
      style={
        Object {
          "cursor": "col-resize",
          "marginLeft": 18,
          "paddingLeft": "4px",
          "paddingRight": "4px",
        }
      }
    >
      <WithStyles(ForwardRef(Divider))
        flexItem={true}
        orientation="vertical"
        style={
          Object {
            "height": "100%",
          }
        }
      />
    </div>
  </Draggable>
</div>
`;

exports[`Data column header component renders correctly with sort and filter 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root MuiTableCell-head test-class MuiTableCell-sizeSmall"
  role="cell"
  style={
    Object {
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
>
  <div
    style={
      Object {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <Styled(MuiBox)
      display="flex"
    >
      <Styled(MuiBox)
        marginRight={1}
      >
        <Icon />
      </Styled(MuiBox)>
      <Styled(MuiBox)>
        <WithStyles(ForwardRef(TableSortLabel))
          active={false}
          className="tour-dataview-sort"
          onClick={[Function]}
        >
          <WithStyles(ForwardRef(Typography))
            noWrap={true}
            style={
              Object {
                "fontSize": "inherit",
                "lineHeight": "inherit",
              }
            }
          >
            Test
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableSortLabel))>
      </Styled(MuiBox)>
    </Styled(MuiBox)>
    <TextColumnFilter
      label="Test"
      onChange={[MockFunction]}
    />
  </div>
  <Draggable
    allowAnyClick={false}
    axis="none"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={null}
    scale={1}
    transform={null}
  >
    <div
      style={
        Object {
          "cursor": "col-resize",
          "marginLeft": 18,
          "paddingLeft": "4px",
          "paddingRight": "4px",
        }
      }
    >
      <WithStyles(ForwardRef(Divider))
        flexItem={true}
        orientation="vertical"
        style={
          Object {
            "height": "100%",
          }
        }
      />
    </div>
  </Draggable>
</div>
`;

exports[`Data column header component renders correctly with sort but no filter 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root MuiTableCell-head test-class MuiTableCell-sizeSmall"
  role="cell"
  style={
    Object {
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
>
  <div
    style={
      Object {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <Styled(MuiBox)
      display="flex"
    >
      <Styled(MuiBox)
        marginRight={1}
      >
        <Icon />
      </Styled(MuiBox)>
      <Styled(MuiBox)>
        <WithStyles(ForwardRef(TableSortLabel))
          active={false}
          className="tour-dataview-sort"
          onClick={[Function]}
        >
          <WithStyles(ForwardRef(Typography))
            noWrap={true}
            style={
              Object {
                "fontSize": "inherit",
                "lineHeight": "inherit",
              }
            }
          >
            Test
          </WithStyles(ForwardRef(Typography))>
        </WithStyles(ForwardRef(TableSortLabel))>
      </Styled(MuiBox)>
    </Styled(MuiBox)>
  </div>
  <Draggable
    allowAnyClick={false}
    axis="none"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={null}
    scale={1}
    transform={null}
  >
    <div
      style={
        Object {
          "cursor": "col-resize",
          "marginLeft": 18,
          "paddingLeft": "4px",
          "paddingRight": "4px",
        }
      }
    >
      <WithStyles(ForwardRef(Divider))
        flexItem={true}
        orientation="vertical"
        style={
          Object {
            "height": "100%",
          }
        }
      />
    </div>
  </Draggable>
</div>
`;

exports[`Data column header component renders correctly without sort or filter 1`] = `
<div
  aria-sort={null}
  className="MuiTableCell-root MuiTableCell-head test-class MuiTableCell-sizeSmall"
  role="cell"
  style={
    Object {
      "paddingLeft": 8,
      "paddingRight": 8,
    }
  }
>
  <div
    style={
      Object {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <Styled(MuiBox)
      display="flex"
    >
      <Styled(MuiBox)
        marginRight={1}
      >
        <Icon />
      </Styled(MuiBox)>
      <Styled(MuiBox)>
        <WithStyles(ForwardRef(Typography))
          noWrap={true}
          style={
            Object {
              "fontSize": "inherit",
              "lineHeight": "inherit",
            }
          }
        >
          Test
        </WithStyles(ForwardRef(Typography))>
      </Styled(MuiBox)>
    </Styled(MuiBox)>
  </div>
  <Draggable
    allowAnyClick={false}
    axis="none"
    bounds={false}
    cancel={null}
    defaultClassName="react-draggable"
    defaultClassNameDragged="react-draggable-dragged"
    defaultClassNameDragging="react-draggable-dragging"
    defaultPosition={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    disabled={false}
    enableUserSelectHack={true}
    grid={null}
    handle={null}
    offsetParent={null}
    onDrag={[Function]}
    onMouseDown={[Function]}
    onStart={[Function]}
    onStop={[Function]}
    position={null}
    scale={1}
    transform={null}
  >
    <div
      style={
        Object {
          "cursor": "col-resize",
          "marginLeft": 18,
          "paddingLeft": "4px",
          "paddingRight": "4px",
        }
      }
    >
      <WithStyles(ForwardRef(Divider))
        flexItem={true}
        orientation="vertical"
        style={
          Object {
            "height": "100%",
          }
        }
      />
    </div>
  </Draggable>
</div>
`;
